...
        MonthArrow(next, true, { onChange(month.plusMonths(1)) }, month.year < 9999)
    }
}

@Composable private fun MonthArrow(label: String, right: Boolean, click: () -> Unit, enabled: Boolean) {
    val color = LocalContentColor.current
    IconButton(click, Modifier.size(36.dp).testTag(if (right) "month-next" else "month-previous")
        .semantics { contentDescription = label }, enabled = enabled) {
        Canvas(Modifier.size(16.dp)) {
            val x = if (right) .65f else .35f
            val other = 1f - x
            drawLine(color, Offset(size.width * other, size.height*.2f), Offset(size.width*x, size.height*.5f), 2.dp.toPx())
            drawLine(color, Offset(size.width*x, size.height*.5f), Offset(size.width * other, size.height*.8f), 2.dp.toPx())
...
